--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "browserify": "",
     "gulp": "",
     "gulp-connect": "",
-    "gulp-jshint": "",
-    "gulp-less": "",
+    "gulp-jshint": "^1.8.4",
+    "gulp-less": "^1.3.5",
+    "gulp-uglify": "^0.3.1",
     "iscroll": "^5.1.2",
     "vinyl-source-stream": ""
   }
