--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "devDependencies": {
     "browserify": "",
     "gulp": "",
+    "gulp-beautify": "^1.1.0",
     "gulp-connect": "",
     "gulp-jshint": "",
     "gulp-less": "",
+    "gulp-uglify": "^0.3.1",
     "iscroll": "^5.1.2",
     "vinyl-source-stream": ""
   }
