--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "gulp": "~3.8.9",
     "amdclean": "~2.4.0",
     "gulp-uglify": "~1.0.1",
+    "gulp-rename": "x",
     "requirejs": "x"
   }
 }
