--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "iSlider",
-  "version": "1.0.0",
+  "name": "islider",
+  "version": "1.1.1",
   "author": "qbatyqi",
+  "main": "build/islider.js",
+  "description": "Smooth mobile touch slider for Mobile WebApp, HTML5 App, Hybrid App",
   "devDependencies": {
     "gulp": "~3.8.9",
     "amdclean": "~2.4.0",
@@ -9,5 +11,18 @@
     "gulp-rename": "x",
     "requirejs": "x",
     "gulp-connect": "~2.2.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:BE-FE/iSlider.git"
+  },
+  "keywords": [
+    "monile",
+    "islider.js",
+    "javascript"
+  ],
+  "bugs": {
+    "url": "https://github.com/BE-FE/iSlider/issues",
+    "email" : "xieyu33333@gmail.com"
   }
 }
