--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "gulp-uglify": "~1.0.1",
     "gulp-rename": "x",
     "requirejs": "x",
-    "gulp-connect": "~2.2.0"
+    "gulp-connect": "~2.2.0",
+    "fecs-files": "x"
   },
   "repository": {
     "type": "git",
