--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "build/islider.js",
   "description": "Smooth mobile touch slider for Mobile WebApp, HTML5 App, Hybrid App",
   "devDependencies": {
-    "gulp": "~3.8.9",
     "amdclean": "~2.4.0",
-    "gulp-uglify": "~1.0.1",
-    "gulp-rename": "x",
-    "requirejs": "x",
+    "gulp": "~3.8.9",
+    "gulp-clean": "^0.3.1",
     "gulp-connect": "~2.2.0",
-    "fecs-files": "x"
+    "gulp-cssmin": "^0.1.7",
+    "gulp-rename": "x",
+    "gulp-uglify": "~1.0.1",
+    "requirejs": "x"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,6 @@
   ],
   "bugs": {
     "url": "https://github.com/BE-FE/iSlider/issues",
-    "email" : "xieyu33333@gmail.com"
+    "email": "xieyu33333@gmail.com"
   }
 }
