--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "iSlider",
-  "version": "2.0.0",
-  "author": "qbatyqi",
+  "version": "2.0.1",
+  "author": "EUX team",
   "main": "build/iSlider.min.js",
   "description": "Smooth mobile touch slider for Mobile WebApp, HTML5 App, Hybrid App",
   "devDependencies": {
@@ -10,7 +10,7 @@
     "gulp-connect": "~2.2.0",
     "gulp-cssmin": "^0.1.7",
     "gulp-rename": "x",
-    "gulp-uglify": "~1.0.1",
+    "gulp-uglify": "~1.0.1"
   },
   "repository": {
     "type": "git",
