--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,26 @@
 {
   "name": "iSlider",
   "homepage": "https://github.com/BE-FE/iSlider",
-  "description": "light smooth mobile slide plugin",
+  "description": "Smooth and high-performance slide web framework. Suitable for PC, Mobile WebApp, HTML5 App, Hybrid App",
   "main": [
     "build/iSlider.min.js",
     "build/iSlider.min.css"
   ],
   "keywords": [
+    "smooth",
+    "hybrid",
+    "mobile",
+    "performance",
     "slide",
-    "mobile"
+    "slider",
+    "animate",
+    "effect",
+    "mobile",
+    "iSlider.js",
+    "javascript",
+    "lightweight",
+    "plug-in",
+    "easy to expand"
   ],
   "authors": [
     "qbaty",
@@ -18,10 +30,12 @@
   "license": "MIT",
   "ignore": [
     "**/.*",
+    "demo",
+    "karma.conf.js",
     "node_modules",
     "*.iml",
     ".idea",
     "test"
   ],
-  "version": "2.0.10"
+  "version": "2.0.11"
 }
