--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "build/iSlider.min.js",
   "description": "Smooth and high-performance slide web framework. Suitable for PC, Mobile WebApp, HTML5 App, Hybrid App",
   "devDependencies": {
+    "babel-preset-es2015": "^6.3.13",
     "eslint": "^1.10.3",
     "gulp": "^3.9.0",
+    "gulp-babel": "^6.1.1",
     "gulp-clean": "^0.3.1",
     "gulp-cssmin": "^0.1.7",
     "gulp-rename": "^1.2.2",
