--- a/package.json
+++ b/package.json
@@ -12,7 +12,16 @@
     "gulp-cssmin": "^0.1.7",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.1",
-    "json-config-reader": "^2.0.1"
+    "json-config-reader": "^2.0.1",
+    "karma": "^0.13.21",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-coverage": "^0.5.3",
+    "karma-mocha": "^0.2.2",
+    "mocha": "^2.4.5"
+  },
+  "scripts": {
+    "test": "karma start",
+    "build": "gulp"
   },
   "repository": {
     "type": "git",
