--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "islider.js",
-  "version": "2.1.3",
+  "version": "2.1.4",
   "author": "EUX team",
   "main": "build/iSlider.min.js",
   "description": "Smooth and high-performance slide web framework. Suitable for PC, Mobile WebApp, HTML5 App, Hybrid App",
@@ -10,6 +10,7 @@
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.1",
     "gulp-cssmin": "^0.1.7",
+    "gulp-load-plugins": "^1.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.1",
     "json-config-reader": "^2.0.1",
@@ -17,7 +18,8 @@
     "karma-chrome-launcher": "^0.2.2",
     "karma-coverage": "^0.5.3",
     "karma-mocha": "^0.2.2",
-    "mocha": "^2.4.5"
+    "mocha": "^2.4.5",
+    "require-dir": "^0.3.0"
   },
   "scripts": {
     "test": "karma start",
