--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "karma-coverage": "^0.5.3",
     "karma-mocha": "^0.2.2",
     "mocha": "^2.4.5",
-    "require-dir": "^0.3.0"
+    "require-dir": "^0.3.0",
+    "through-gulp": "^0.5.0"
   },
   "scripts": {
     "test": "karma start",
