--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   ],
   "bugs": {
     "url": "https://github.com/BE-FE/iSlider/issues",
-    "email": "xieyu33333@gmail.com"
+    "email": "shine.wangrs@gmail.com"
   },
   "license": "MIT"
 }
